--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port=8082
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:g3qm-db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=g3qm
+spring.datasource.password=g3qm
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
