--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
       url: jdbc:postgresql://localhost:5432/g3
       username: qm
       password: g3_qm
-    inner:
+    cache:
       driverClassName: org.h2.Driver
       url: jdbc:h2:mem:g3qm-db
       username: qm
